refactoring chart directive

--- a/templates/webapp/month_balance_panel.html
+++ b/templates/webapp/month_balance_panel.html
@@ -60,5 +60,5 @@
 
     <h4 class="panel-title">{% trans "Average" %}</h4>
 
-    <chart value='chartData' type="area" height="300"></chart>
+    <div value='chartData' type="area" height="300" chart></div>
 </div>
