--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -266,13 +266,21 @@ span.category-label {
 
 .month-selector {
     margin-bottom: 20px;
-    text-align: center;
     width: 100%;
+    text-align: center;
 
-    > button {
-        .btn();
-        .btn-small();
+    i {
+        font-size: 20px;
     }
+
+    .actual-month {
+        width: 25%
+    }
+}
+
+.loading-spinner {
+    width: 100%;
+    text-align: center;
 }
 
 #empty-msg {
