commenting reminder cration

--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -9,98 +9,95 @@
     novalidate
     >
 
-    <fieldset>
-    
-        <h4 class="panel-title">{% trans "New transaction" %}</h4>
+    <h4 class="panel-title">{% trans "New transaction" %}</h4>
 
-        <div class="control-group" ng-class="{error: errors.category}">
-            <div class="controls">
-                <i class="icon-tag input-icon"></i>
-                <input
-                    id="id_category"
-                    maxlength="200"
-                    name="category"
-                    type="text"
-                    class="input-block-level"
+    <div class="control-group" ng-class="{error: errors.category}">
+        <div class="controls">
+            <i class="icon-tag input-icon"></i>
+            <input
+                id="id_category"
+                maxlength="200"
+                name="category"
+                type="text"
+                class="input-block-level"
 
-                    ng-model="transaction.category"
-                    ex-categoryfield
+                ng-model="transaction.category"
+                ex-categoryfield
 
-                    bs-tooltip
-                    title="{% trans "Example: &quot;Groceries&quot;, &quot;Lunch&quot;" %}"
-                    data-placement="right"
+                bs-tooltip
+                title="{% trans "Example: &quot;Groceries&quot;, &quot;Lunch&quot;" %}"
+                data-placement="right"
 
-                    autofocus
-                    autocomplete="off"
+                autofocus
+                autocomplete="off"
 
-                    placeholder="{% trans "Category" %}"
-                    required
-                    />
+                placeholder="{% trans "Category" %}"
+                required
+                />
 
-                <span class="help-block" ng-show="errors.category">{% trans "Required" %}</span>
-            </div>
+            <span class="help-block" ng-show="errors.category">{% trans "Required" %}</span>
         </div>
+    </div>
 
-        <div class="control-group" ng-class="{error: errors.value}">
-            <div class="controls">
-                <i class="icon-dollar input-icon"></i>
-                <input
-                    id="id_value"
-                    name="value"
-                    type="text"
-                    class="input-block-level"
+    <div class="control-group" ng-class="{error: errors.value}">
+        <div class="controls">
+            <i class="icon-dollar input-icon"></i>
+            <input
+                id="id_value"
+                name="value"
+                type="text"
+                class="input-block-level"
 
-                    ng-model="transaction.value"
-                    ex-valuefield
+                ng-model="transaction.value"
+                ex-valuefield
 
-                    bs-tooltip
-                    title="{% trans "Use a &quot;+&quot; sign to indicate positive values." %}"
-                    data-placement="right"
+                bs-tooltip
+                title="{% trans "Use a &quot;+&quot; sign to indicate positive values." %}"
+                data-placement="right"
 
-                    autocomplete="off"
-                    placeholder="{% trans "Value" %}"
-                    />
+                autocomplete="off"
+                placeholder="{% trans "Value" %}"
+                />
 
-                <span class="help-block" ng-show="errors.value">{% trans "Required" %}</span>
-            </div>
+            <span class="help-block" ng-show="errors.value">{% trans "Required" %}</span>
         </div>
+    </div>
 
-        <div class="control-group">
-            <div class="controls">
-                <i class="icon-pencil input-icon"></i>
-                <input
-                    id="id_description"
-                    maxlength="200"
-                    name="description"
-                    type="text"
-                    class="input-block-level"
+    <div class="control-group">
+        <div class="controls">
+            <i class="icon-pencil input-icon"></i>
+            <input
+                id="id_description"
+                maxlength="200"
+                name="description"
+                type="text"
+                class="input-block-level"
 
-                    ng-model="transaction.description"
+                ng-model="transaction.description"
 
-                    placeholder="{% trans "Description (optional)" %}"
-                    autocomplete="off"
-                    />
-            </div>
+                placeholder="{% trans "Description (optional)" %}"
+                autocomplete="off"
+                />
         </div>
+    </div>
 
-        <div ex-datepicker="transaction.date"></div>
+    <div ex-datepicker="transaction.date"></div>
 
-        <hr/>
+    <hr/>
 
-        <label class="checkbox" ng-show="false">
-            <input type="checkbox" ng-model="isRepeat">{% trans "Repeat this transaction" %}</input>
-        </label>
-    </fieldset>
+    {% comment %}
+    <label class="checkbox" ng-show="false">
+        <input type="checkbox" ng-model="isRepeat">{% trans "Repeat this transaction" %}</input>
+    </label>
 
-    <fieldset ng-show="isRepeat">
-        <div class="control-group" ng-class="{error: errors.repeat}">
-            <div class="controls">
-                <label class="control-label" for="repeat">{% trans "Create a reminder that repeats:" %}</label>
-                <select name="repeat" ng-model="transaction.repeat" ng-options="label for label in repeatOptions" ng-required="isRepeat"></select>
-                <span class="help-block" ng-show="errors.repeat">{% trans "Required" %}</span>
-            </div>
+    <div class="control-group" ng-class="{error: errors.repeat}">
+        <div class="controls">
+            <label class="control-label" for="repeat">{% trans "Create a reminder that repeats:" %}</label>
+            <select name="repeat" ng-model="transaction.repeat" ng-options="label for label in repeatOptions" ng-required="isRepeat"></select>
+            <span class="help-block" ng-show="errors.repeat">{% trans "Required" %}</span>
         </div>
-    </fieldset>
+    </div>
+    {% endcomment %}
 
     <button ng-click="submit()" class="btn" ng-disabled="sending">
     <i ng-show="sending" class="icon-spinner icon-spin icon-large"></i>
