--- a/templates/webapp/settings/settings.html
+++ b/templates/webapp/settings/settings.html
@@ -4,7 +4,9 @@
     <ul class="nav nav-list" id="settings-menu">
         <li class="nav-header">{% trans "Menu" %}</li>
         <li ng-class="{active: $state.includes('settings.categories')}"><a href="#/settings/categories">{% trans "Categories" %}</a></li>
+        {% comment %}
         <li ng-class="{active: $state.includes('settings.reminders')}"><a href="#/settings/reminders">{% trans "Reminders" %}</a></li>
+        {% endcomment %}
     </ul>
 </div>
 
