--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -22,9 +22,11 @@
         ng-model="transaction.category"
         ex-categoryfield
 
+        {% comment %}
         bs-tooltip
         title="{% trans "Example: &quot;Groceries&quot;, &quot;Lunch&quot;" %}"
         data-placement="right"
+        {% endcomment %}
 
         autofocus
         autocomplete="off"
@@ -43,9 +45,11 @@
         ng-model="transaction.value"
         ex-valuefield
 
+        {% comment %}
         bs-tooltip
         title="{% trans "Use a &quot;+&quot; sign to indicate positive values." %}"
         data-placement="right"
+        {% endcomment %}
 
         autocomplete="off"
         placeholder="{% trans "Value" %}"
