--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8375,26 +8375,28 @@ p.outgo {
   top: 20px;
   width: 230px;
 }
-form.form-inline i.input-icon {
-  top: 6px;
-  left: 10px;
+form.form-inline .input-icon i.input-icon-prepend {
+  top: 1px;
+  left: 20px;
 }
-form.form-inline input {
+form.form-inline .input-icon input {
   margin-left: 10px;
 }
-form i.input-icon {
+form .input-icon {
   position: relative;
 }
-form i.input-icon:before {
+form .input-icon i.input-icon-prepend {
   position: absolute;
   left: 10px;
-  top: -8px;
+  top: 5px;
 }
-form i.input-icon + input {
+form .input-icon i.input-icon-append {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+form .input-icon input {
   text-indent: 23px;
-}
-form .control-group {
-  margin-bottom: 0px;
 }
 .center-form {
   width: 300px;
