--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -77,31 +77,36 @@ body {
 
 form {
     &.form-inline {
-        i.input-icon {
-            top: 6px;
+        .input-icon {
+            i.input-icon-prepend {
+                top: 1px;
+                left: 20px;
+            }
+
+            input {
+                margin-left: 10px;
+            }
+        }
+    }
+
+    .input-icon {
+        position: relative;
+
+        i.input-icon-prepend {
+            position: absolute;
             left: 10px;
+            top: 5px;
+        }
+
+        i.input-icon-append {
+            position: absolute;
+            right: 10px;
+            top: 5px;
         }
 
         input {
-            margin-left: 10px;
-        }
-    }
-    i.input-icon {
-        position: relative;
-
-        &:before {
-            position: absolute;
-            left: 10px;
-            top: -8px;
-        }
-
-        + input {
             text-indent: 23px;
         }
-    }
-
-    .control-group {
-        margin-bottom: 0px;
     }
 }
 
