--- a/templates/access/forms/register.html
+++ b/templates/access/forms/register.html
@@ -4,15 +4,15 @@
     <h2>{% trans "Sign up" %}</h2>
     
     <div class="control-group {% if register_form.name.errors %}error{% endif %}">
-        <div class="controls">
-                <i class="icon-user input-icon"></i>
-                <input
-                    type="text"
-                    name="name"
-                    class="input-block-level"
-                    placeholder="{% trans "Name" %}"
-                    value="{{ register_form.name.value|default_if_none:"" }}"
-                >
+        <div class="controls input-icon">
+            <i class="icon-user input-icon-prepend"></i>
+            <input
+                type="text"
+                name="name"
+                class="input-block-level"
+                placeholder="{% trans "Name" %}"
+                value="{{ register_form.name.value|default_if_none:"" }}"
+            >
 
             {% for error in register_form.name.errors %}
                 <span class="help-block error">{{ error }}</span>
@@ -21,8 +21,8 @@
     </div>
 
     <div class="control-group {% if register_form.email.errors %}error{% endif %}">
-        <div class="controls">
-            <i class="icon-envelope input-icon"></i>
+        <div class="controls input-icon">
+            <i class="icon-envelope input-icon-prepend"></i>
             <input
                 type="text"
                 name="email"
@@ -38,8 +38,8 @@
     </div>
 
     <div class="control-group {% if register_form.password1.errors %}error{% endif %}">
-        <div class="controls">
-                <i class="icon-asterisk input-icon"></i>
+        <div class="controls input-icon">
+                <i class="icon-asterisk input-icon-prepend"></i>
                 <input
                     type="password"
                     name="password1"
@@ -54,8 +54,8 @@
     </div>
 
     <div class="control-group {% if register_form.password2.errors %}error{% endif %}">
-        <div class="controls">
-                <i class="icon-asterisk input-icon"></i>
+        <div class="controls input-icon">
+                <i class="icon-asterisk input-icon-prepend"></i>
                 <input
                     type="password"
                     name="password2"
