refactorinf transaction form, better validation

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -56,6 +56,7 @@ body {
 @import "settings.less";
 @import "balance.less";
 @import "charts.less";
+@import "forms.less";
 
 /*
  * GLOBAL STYLES
@@ -74,42 +75,6 @@ body {
     top: 20px;
     width: 230px;
 }
-
-form {
-    &.form-inline {
-        .input-icon {
-            i.input-icon-prepend {
-                top: 1px;
-                left: 20px;
-            }
-
-            input {
-                margin-left: 10px;
-            }
-        }
-    }
-
-    .input-icon {
-        position: relative;
-
-        i.input-icon-prepend {
-            position: absolute;
-            left: 10px;
-            top: 5px;
-        }
-
-        i.input-icon-append {
-            position: absolute;
-            right: 10px;
-            top: 5px;
-        }
-
-        input {
-            text-indent: 23px;
-        }
-    }
-}
-
 
 .center-form {
     width: 300px;
