--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8358,23 +8358,6 @@ p.outgo {
   text-align: center;
   margin-bottom: 5px;
 }
-/*
- * GLOBAL STYLES
- */
-/* 
-  Allow angular.js to be loaded in body, hiding cloaked elements until 
-  templates compile.  The !important is important given that there may be 
-  other selectors that are more specific or come later and might alter display.  
- */
-[ng\:cloak],
-[ng-cloak],
-.ng-cloak {
-  display: none !important;
-}
-.affix {
-  top: 20px;
-  width: 230px;
-}
 form.form-inline .input-icon i.input-icon-prepend {
   top: 1px;
   left: 20px;
@@ -8397,6 +8380,26 @@ form .input-icon i.input-icon-append {
 }
 form .input-icon input {
   text-indent: 23px;
+}
+i.input-error {
+  color: #b94a48;
+}
+/*
+ * GLOBAL STYLES
+ */
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak],
+[ng-cloak],
+.ng-cloak {
+  display: none !important;
+}
+.affix {
+  top: 20px;
+  width: 230px;
 }
 .center-form {
   width: 300px;
