isolated controller for category edition

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -74,6 +74,7 @@
         <script src="{{controllers}}TransactionFormCtrl.js"></script>
         <script src="{{controllers}}TransactionListCtrl.js"></script>
         <script src="{{controllers}}CategoryListCtrl.js"></script>
+        <script src="{{controllers}}CategoryEditCtrl.js"></script>
         <script src="{{controllers}}ReminderListCtrl.js"></script>
 
         <script src="{{app}}services.js"></script>
