new bootstrap 3 less and js, also muting conflicts

--- a/static/less/presentation.less
+++ b/static/less/presentation.less
@@ -19,10 +19,13 @@ section.highlight2 {
 }
 */
 
+/*
+ativar de novo
 .hero-unit.presentation-block {
     #translucent > .border(@alpha: 0);
     #translucent > .background(@alpha: 0) !important;
 }
+*/
 
 form {
     &[id="register-form"], &[id="signin-form"] {
