--- a/static/less/balance.less
+++ b/static/less/balance.less
@@ -13,11 +13,11 @@ div.balance-info {
         }
 
         &.income {
-            color: @green;
+            //color: @green;
         }
 
         &.outgo {
-            color: @red;
+            //color: @red;
         }
 
         &.total {
@@ -27,10 +27,10 @@ div.balance-info {
             }
 
             &.positive {
-                color: @blue;
+                //color: @blue;
             }
             &.negative {
-                color: @red;
+                //color: @red;
             }
         }
 
@@ -51,9 +51,9 @@ div.balance-info {
 
 p {
     &.income {
-        color: @green;
+        //color: @green;
     }
     &.outgo {
-        color: @red;
+        //color: @red;
     }
 }
