--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -19,7 +19,7 @@
 
 <div class="container" ng-app="webapp" id="ng-app">
     <div class="row">
-        <div class="span12">
+        <div class="col-md-8">
         <ul class="nav nav-pills">
             <li ng-class="{active: $state.includes('transactions')}"><a href="#/transactions">{% trans "Transactions" %}</a></li>
             <li ng-class="{active: $state.includes('settings')}"><a href="#/settings">{% trans "Settings" %}</a></li>
