--- a/templates/base.html
+++ b/templates/base.html
@@ -27,25 +27,35 @@
         {% block extrahead %}{% endblock extrahead %}
     </head>
     <body>
-        {% block navbar %}
-        <div class="navbar navbar-static-top">
-            <div class="navbar-inner">
-                <div class="container container-fluid">
-                    <a class="brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
+
+    <div class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
+            </div>
+
+            <div class="collapse navbar-collapse">
+                <div class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                        <p class="navbar-text pull-right">
-                            Olá, {{ user.name|capfirst }} ({{ user.email }}) (<a href="{% url "change_password" %}" class="navbar-link">Change password</a>) (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
-                        {% if user.is_admin %}
-                           (<a href="{% url "admin:index" %}" class="navbar-link">Painel de admininstração</a>)
-                        {% endif %}
-                        </p>
+                    <p class="navbar-text">
+                            Olá, {{ user.name|capfirst }} (<a href="{% url "change_password" %}" class="navbar-link">Change password</a>) (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
+                    </p>
                     {% else %}
                         {% include "access/forms/login_inline.html" %}
                     {% endif %}
                 </div>
             </div>
         </div>
-        {% endblock navbar %}
+    </div>
+
+{% comment %}
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+{% endcomment %}
 
         {% block body %}{% endblock body %}
 
