migration almost complete

--- a/static/less/balance.less
+++ b/static/less/balance.less
@@ -13,11 +13,11 @@ div.balance-info {
         }
 
         &.income {
-            //color: @green;
+            color: @income;
         }
 
         &.outgo {
-            //color: @red;
+            color: @outgo;
         }
 
         &.total {
@@ -27,10 +27,10 @@ div.balance-info {
             }
 
             &.positive {
-                //color: @blue;
+                color: @positive;
             }
             &.negative {
-                //color: @red;
+                color: @negative;
             }
         }
 
@@ -51,9 +51,9 @@ div.balance-info {
 
 p {
     &.income {
-        //color: @green;
+        color: @income;
     }
     &.outgo {
-        //color: @red;
+        color: @outgo;
     }
 }
