--- a/static/less/toastr-override.less
+++ b/static/less/toastr-override.less
@@ -7,7 +7,7 @@
 
 #toast-container {
     > div {
-        .borderRadius(@baseBorderRadius) !important;
+        .borderRadius(@border-radius-base) !important;
         .boxShadow(none) !important;
     }
 
