--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -1,10 +1,13 @@
-@bodyBackground:        #f5f5f5;
-@heroUnitBackground:    #fff;
-@heroUnitBorder:        #ccc;
-@wellBackground:        #fff;
-@baseFontSize:          12px;
-@baseBorderRadius:      1px;
-@borderRadiusLarge:     1px;
-@borderRadiusSmall:     1px;
+// Components
+// -------------------------
+@border-radius-base:             0px;
+@border-radius-large:            0px;
+@border-radius-small:            0px;
 
-@panelBorder: #ccc;
+
+// Colors
+// -------------------------
+@positive:                  #049cdb;
+@negative:                  #9d261d;
+@income:                    #46a546;
+@outgo:                     @negative;
