--- a/templates/webapp/settings/settings.html
+++ b/templates/webapp/settings/settings.html
@@ -1,15 +1,21 @@
 {% load i18n %}
 
 <div class="col-md-3">
-    <ul class="nav nav-list" id="settings-menu">
-        <li class="nav-header">{% trans "Menu" %}</li>
-        <li ng-class="{active: $state.includes('settings.categories')}"><a href="#/settings/categories">{% trans "Categories" %}</a></li>
-        {% comment %}
-        <li ng-class="{active: $state.includes('settings.reminders')}"><a href="#/settings/reminders">{% trans "Reminders" %}</a></li>
-        {% endcomment %}
-    </ul>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            {% trans "Menu" %}
+        </div>
+        <div class="panel-body">
+            <ul class="nav nav-list" id="settings-menu">
+                <li ng-class="{active: $state.includes('settings.categories')}"><a href="#/settings/categories">{% trans "Categories" %}</a></li>
+                {% comment %}
+                <li ng-class="{active: $state.includes('settings.reminders')}"><a href="#/settings/reminders">{% trans "Reminders" %}</a></li>
+                {% endcomment %}
+            </ul>
+        </div>
+    </div>
 </div>
 
 <div class="col-md-9">
-    <div id="settings-pane" ui-view></div>
+    <div id="settings-pane" class="panel panel-default" ui-view></div>
 </div>
