--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -16,7 +16,7 @@
                 <span class="input-icon">
                     <input type="text" name="name" ng-model="editing_category.name" required>
                     <i
-                        class="icon-exclamation icon-2x input-icon-append input-error"
+                        class="icon-exclamation icon-small input-icon-append input-error"
                         ng-show="category_form.name.$error.required && category_form.name.$dirty"
                         ></i>
                 </span>
