--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -35,7 +35,7 @@
             required
             />
         <i
-            class="icon-exclamation icon-2x input-icon-append input-error"
+            class="icon-exclamation icon-large input-icon-append input-error"
             ng-show="transactionForm.category.$error.required && transactionForm.category.$dirty"
             ></i>
     </div>
